unified_tests/assignments/immutable_binding_reassignment/expect/build.text.stderr
lib.copp:3:5: error: cannot assign to immutable binding 'x'
      x = 2
      ^
